media/prowlarr/prowlarr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    kubernetes.io/metadata.name: prowlarr
    media-ns: authorized
