media/prowlarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:1.37.0
        ports:
          - containerPort: 9696
        volumeMounts:
          - name: prowlarr-config
            mountPath: /config
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-pvc
