media/prowlarr/prowlarr-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr-network
  namespace: prowlarr
spec:
  podSelector:
    matchLabels:
      app: prowlarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            media-ns: authorized
        podSelector:
          matchLabels:
            media-app: authorized
        podSelector:
          matchLabels:
            app: whisparr
      ports:
        - protocol: TCP
          port: 9696
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: gluetun
      ports:
        - protocol: TCP
          port: 8888
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
    - to:
      - ipBlock:
          cidr: 10.42.0.0/16
    - to:
      - ipBlock:
          cidr: 10.43.0.0/16
